2014-07-27  Holger Seelig  <holger.seelig@yahoo.de>

	* 1728.x3dv:
	* ClipPlane.wrl: 

2014-07-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* 1728.x3dv: 

2014-07-26  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Cube.wrl:
	* Shutdown.x3dv: 

2014-07-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Shutdown.x3dv: 

2014-07-22  Holger Seelig  <holger.seelig@yahoo.de>

	* Border.wrl: 

2014-07-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Border.wrl: 

2014-07-20  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-20  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-20  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-19  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-19  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-18  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2014-07-17  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-17  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Geometry3D.wrl: 

2014-07-16  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-16  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl:
	* OutlineEditor.wrl: 

2014-07-15  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Inline.wrl: 

2014-07-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Transform-URI.x3dv: 

2014-07-14  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-13  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-13  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: